2009-??-??  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.3.2
	* added option -Q to sort netCDF variable names
	* splitsel: change the number of output digits from 3 to 6
	* Version 1.3.2 released

2009-04-16  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
	
	* using CDI library version 1.3.1
	* set default calendar to proleptic gregorian
	* New operator (experimental): select with parameter code, level, param
	* added support for proleptic gregorian calendar
	* added support for missval = NaN
	* added support for GRID type Lambert Conformal Conic
	* import_cmsaf: read parameter for Lambert Azimuthal Equal Area projection
	* import_cmsaf: read parameter for Cylindrical Equal Area projection
	* import_cmsaf: bug fix for datasets with gain/offset and more than 1 timestep
	* Sinusoidal and Lambert Azimuthal Equal Area grids with units [km]
	* cdoInitialize: omp_set_num_threads have to be called for every module
	* expr: add ';' at the end of input expression if missing
	* added predefined lonlat grid for germany, europe and africa
	* gridFromName: define GRID with one point lon=<LON>_lat=<LAT>
	* sellonlatbox: select box from circular curvilinear grids
	* CDO_PCTL_NBINS: change default number of bins from 100 to 101
	* change max parameter from 256 to 4096 (bug fix) [report: Nils Fischer]
	* intlevel: use zaxis attributes from input [report: Carmen Ulmen]
	* ml2pl: added support for Geopotential Height [request: Katharina Klehmet]
	* remapbil, remapbic: enable extrapolation with REMAP_EXTRAPOLATE=ON
	* remapdis, remapnn: disable extrapolation with REMAP_EXTRAPOLATE=OFF
	* remapcon: eliminate srch_mask (~40% speed up)
	* remapcon: change bound_box to int type (~25% speed up)
	* remapcon: optimization of inner loop (~7% speed up)
	* remaplaf: bug fix for fields with missing values
	* remapnn: bug fix for distance equal zero
	* genYbounds: bug fix for non global fields
	* mermean: bug fix for weights from 'zonmean' (report: Michael Sigmond)