@@ -3,6 +3,8 @@
 	* using CDI library version 1.3.2
 	* added option -Q to sort netCDF variable names
 	* splitsel: change the number of output digits from 3 to 6
+	* remapcon: use store_link_cnsrv_fast (optimized version of store_link_cnsrv)
+	* Remapeta: correct humidity up to highest level *nctop* where condensation is allowed
 	* Version 1.3.2 released
 
 2009-04-16  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
